Show spinner during Apex call
Signed-off-by: KK Ramamoorthy <kumarrk21@gmail.com>

--- a/src/aura/S1QuotePDFComponent/S1QuotePDFComponent.cmp
+++ b/src/aura/S1QuotePDFComponent/S1QuotePDFComponent.cmp
@@ -5,6 +5,7 @@
 	<aura:attribute name="pdfData" type="String"/>
 	<aura:attribute name="pdfContainer" type="Aura.Component[]"/>
 	<aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
+	<lightning:spinner aura:id="_spinner" variant="brand" size="large"/>
 	<lightning:input type="email" name="emailId" label="Email" placeholder="Enter email ID..." value="{!v.emailId}"/>
 	<lightning:layout horizontalAlign="spread">
 		<lightning:layoutItem padding="around-small">
